@@ -31,6 +31,10 @@ ToDo/Notes:
 	  fs/ntfs/inode.c::ntfs_truncate() to set and clear it appropriately.
 	- Fix min_size and max_size definitions in ATTR_DEF structure in
 	  fs/ntfs/layout.h to be signed.
+	- Add attribute definition handling helpers to fs/ntfs/attrib.[hc]:
+	  ntfs_attr_size_bounds_check(), ntfs_attr_can_be_non_resident(), and
+	  ntfs_attr_can_be_resident(), which in turn use the new private helper
+	  ntfs_attr_find_in_attrdef().
 
 2.1.21 - Fix some races and bugs, rewrite mft write code, add mft allocator.
 
